# crypto_project

./: README.md  deploy_dataflow_job.sh  processing.ipynb  start.sh
crypto_project/: README.md  enable_services.sh  pyproject.toml
crypto_project/crypto_api_function/: requirements.txt
crypto_project/pipeline/: pipeline.py  requirements.txt
crypto_project/terraform/: variables.tf
source/crypto_api_function/: main.py  requirements.txt
source/dataflow/: pipeline.py  processing.ipynb
terraform/: main.tf  output.tf  variables.tf
