[tool.poetry]
name = "crypto-project"
version = "0.1.0"
description = ""
authors = ["ludsonfelipe <felipe_ludson@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
blue = "^0.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
pip-audit = "^2.6.1"


[tool.poetry.group.beam-pipeline.dependencies]
apache-beam = {extras = ["gcp"], version = "^2.50.0"}


[tool.poetry.group.cloudfunction.dependencies]
requests = "^2.31.0"
google-cloud-pubsub = "^2.18.4"
google-cloud-secret-manager = "^2.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"